Split Engine into 2: Factory and Engine. Factory creates games, engine runs them.

--- a/GameEngine/GameEngine.csproj
+++ b/GameEngine/GameEngine.csproj
@@ -41,8 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Engine.cs" />
+    <Compile Include="EngineFactory.cs" />
     <Compile Include="Character.cs" />
+    <Compile Include="EngineInternal.cs" />
     <Compile Include="GameState.cs" />
     <Compile Include="IGameData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
