--- a/GameEngine/GameEngine.csproj
+++ b/GameEngine/GameEngine.csproj
@@ -55,7 +55,7 @@
     <Compile Include="Character.cs" />
     <Compile Include="EngineInternal.cs" />
     <Compile Include="GameState.cs" />
-    <Compile Include="IGameData.cs" />
+    <Compile Include="IGameSourceData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringExtensionMethods.cs" />
   </ItemGroup>
