--- a/GameEngine/GameEngine.csproj
+++ b/GameEngine/GameEngine.csproj
@@ -51,11 +51,15 @@
     <Compile Include="Commands\LoadCommand.cs" />
     <Compile Include="Commands\MoveCommand.cs" />
     <Compile Include="Commands\SaveCommand.cs" />
+    <Compile Include="Locations\LocationConnectionGameVar.cs" />
+    <Compile Include="Locations\LocationConnectionBasic.cs" />
+    <Compile Include="Locations\LocationConnection.cs" />
     <Compile Include="EngineFactory.cs" />
     <Compile Include="Character.cs" />
     <Compile Include="EngineInternal.cs" />
     <Compile Include="GameState.cs" />
     <Compile Include="IGameSourceData.cs" />
+    <Compile Include="Locations\Location.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringExtensionMethods.cs" />
   </ItemGroup>
