--- a/DreamsAndWhatTheyMean/TheTaleOfTheDragonKitty.csproj
+++ b/DreamsAndWhatTheyMean/TheTaleOfTheDragonKitty.csproj
@@ -4,16 +4,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C578242E-55E6-4A63-89A4-138505108342}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>GameEngine</RootNamespace>
-    <AssemblyName>GameEngine</AssemblyName>
+    <ProjectGuid>{B9D23B86-F863-4610-9555-22CC36B9AB97}</ProjectGuid>
+    <OutputType>Exe</OutputType>
+    <RootNamespace>DreamsAndWhatTheyMean</RootNamespace>
+    <AssemblyName>DreamsAndWhatTheyMean</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,6 +24,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -31,9 +33,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.12.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -44,35 +43,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Commands\ClearCommand.cs" />
-    <Compile Include="Commands\CommandHelper.cs" />
-    <Compile Include="Commands\ExitCommand.cs" />
-    <Compile Include="Commands\ICommand.cs" />
-    <Compile Include="Commands\LetPlayerChangeTheirNameCommand.cs" />
-    <Compile Include="Commands\LoadCommand.cs" />
-    <Compile Include="Commands\LookCommand.cs" />
-    <Compile Include="Commands\MoveCommand.cs" />
-    <Compile Include="Commands\SaveCommand.cs" />
-    <Compile Include="Console.cs" />
-    <Compile Include="GameSourceDataBase.cs" />
-    <Compile Include="Item.cs" />
-    <Compile Include="Locations\PortalAlwaysClosedRule.cs" />
-    <Compile Include="Locations\PortalAlwaysOpenRule.cs" />
-    <Compile Include="Locations\PortalOpenGameVarRule.cs" />
-    <Compile Include="Locations\PortalDestinationDetails.cs" />
-    <Compile Include="Locations\PortalRule.cs" />
-    <Compile Include="Locations\Portal.cs" />
-    <Compile Include="EngineFactory.cs" />
-    <Compile Include="Character.cs" />
-    <Compile Include="EngineInternal.cs" />
-    <Compile Include="GameState.cs" />
-    <Compile Include="Locations\Location.cs" />
+    <Compile Include="TheTaleOfTheDragonKittyGameData.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StringExtensionMethods.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\GameEngine\GameEngine.csproj">
+      <Project>{C578242E-55E6-4A63-89A4-138505108342}</Project>
+      <Name>GameEngine</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
