--- a/GameEngine/GameEngine.csproj
+++ b/GameEngine/GameEngine.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Console.cs" />
     <Compile Include="GameSourceDataBase.cs" />
     <Compile Include="Item.cs" />
+    <Compile Include="ItemRecipe.cs" />
     <Compile Include="Locations\PortalAlwaysClosedRule.cs" />
     <Compile Include="Locations\PortalAlwaysOpenRule.cs" />
     <Compile Include="Locations\PortalOpenGameVarRule.cs" />
@@ -69,6 +70,7 @@
     <Compile Include="Locations\Location.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringExtensionMethods.cs" />
+    <Compile Include="TradeSet.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
