--- a/GameEngine/GameEngine.csproj
+++ b/GameEngine/GameEngine.csproj
@@ -57,6 +57,7 @@
     <Compile Include="GameSourceDataBase.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="ItemRecipe.cs" />
+    <Compile Include="ItemRecipeIngredient.cs" />
     <Compile Include="Locations\PortalAlwaysClosedRule.cs" />
     <Compile Include="Locations\PortalAlwaysOpenRule.cs" />
     <Compile Include="Locations\PortalOpenGameVarRule.cs" />
