--- a/GameEngine/GameEngine.csproj
+++ b/GameEngine/GameEngine.csproj
@@ -44,6 +44,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commands\InventoryCommand.cs" />
+    <Compile Include="Commands\ShopCommand.cs" />
     <Compile Include="Commands\ClearCommand.cs" />
     <Compile Include="Commands\CommandHelper.cs" />
     <Compile Include="Commands\ExitCommand.cs" />
@@ -71,6 +73,7 @@
     <Compile Include="Locations\Location.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringExtensionMethods.cs" />
+    <Compile Include="TradePost.cs" />
     <Compile Include="TradeSet.cs" />
   </ItemGroup>
   <ItemGroup>
