--- a/GameEngine/GameEngine.csproj
+++ b/GameEngine/GameEngine.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Commands\LookCommand.cs" />
     <Compile Include="Commands\MoveCommand.cs" />
     <Compile Include="Commands\SaveCommand.cs" />
+    <Compile Include="Commands\StatsCommand.cs" />
     <Compile Include="Console.cs" />
     <Compile Include="GameSourceDataBase.cs" />
     <Compile Include="Item.cs" />
