Adding interact command and hook up the light switch to light example Adding ability for items to specify what happens when they are interacted with Add more helper methods Split item name into tracking name and display name Rewrite commands to use the tracking name, but display the displayname/description.

--- a/ExampleGame/ExampleGame.csproj
+++ b/ExampleGame/ExampleGame.csproj
@@ -48,8 +48,9 @@
     <Compile Include="ExampleGameSourceData.cs" />
     <Compile Include="ExampleCharacters.cs" />
     <Compile Include="ExampleGameVariables.cs" />
+    <Compile Include="Items\ColoredLightSwitch.cs" />
     <Compile Include="Items\CrystalDiviner.cs" />
-    <Compile Include="Items\ItemRedGreenLight.cs" />
+    <Compile Include="Items\ColoredLight.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
