--- a/DreamsAndWhatTheyMean/TheTaleOfTheDragonKitty.csproj
+++ b/DreamsAndWhatTheyMean/TheTaleOfTheDragonKitty.csproj
@@ -47,7 +47,8 @@
     <Compile Include="DragonKittyGameVarables.cs" />
     <Compile Include="DragonKittyItems.cs" />
     <Compile Include="DragonKittyLocations.cs" />
-    <Compile Include="DragonKittyStrangeItems\LightMine.cs" />
+    <Compile Include="DragonKittyStrangeItems\Apple.cs" />
+    <Compile Include="DragonKittyStrangeItems\BronzeTalisman.cs" />
     <Compile Include="DragonKittyStrangeItems\RoomLight.cs" />
     <Compile Include="TheTaleOfTheDragonKittySourceData.cs" />
     <Compile Include="Program.cs" />
