--- a/GameEngine/GameEngine.csproj
+++ b/GameEngine/GameEngine.csproj
@@ -81,6 +81,7 @@
     <Compile Include="MutablePair.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringExtensionMethods.cs" />
+    <Compile Include="TrackableInstance.cs" />
     <Compile Include="TradePost.cs" />
     <Compile Include="TradeSet.cs" />
   </ItemGroup>
