--- a/GameEngine/GameEngine.csproj
+++ b/GameEngine/GameEngine.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Commands\SaveCommand.cs" />
     <Compile Include="Commands\StatsCommand.cs" />
     <Compile Include="Console.cs" />
+    <Compile Include="EqualChecker.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="ItemRecipe.cs" />
     <Compile Include="ItemRecipeIngredient.cs" />
