--- a/GameEngine/GameEngine.csproj
+++ b/GameEngine/GameEngine.csproj
@@ -44,6 +44,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Characters\Behaviors\BuiltInTurnBehaviors.cs" />
+    <Compile Include="Characters\Behaviors\ITurnBehavior.cs" />
+    <Compile Include="Characters\Behaviors\TurnBehaviorRandom.cs" />
     <Compile Include="Characters\PlayerCharacter.cs" />
     <Compile Include="Commands\AttackCommand.cs" />
     <Compile Include="Commands\DropCommand.cs" />
