--- a/GameEngine/GameEngine.csproj
+++ b/GameEngine/GameEngine.csproj
@@ -45,24 +45,24 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Characters\PlayerCharacter.cs" />
-    <Compile Include="Commands\AttackCommand.cs" />
-    <Compile Include="Commands\DropCommand.cs" />
-    <Compile Include="Commands\ICommandInternal.cs" />
-    <Compile Include="Commands\InteractCommand.cs" />
-    <Compile Include="Commands\GrabCommand.cs" />
-    <Compile Include="Commands\InventoryCommand.cs" />
-    <Compile Include="Commands\InternalCommandHelper.cs" />
-    <Compile Include="Commands\ShopCommand.cs" />
-    <Compile Include="Commands\ClearCommand.cs" />
-    <Compile Include="Commands\PublicCommandHelper.cs" />
-    <Compile Include="Commands\ExitCommand.cs" />
-    <Compile Include="Commands\ICommand.cs" />
-    <Compile Include="Commands\LetPlayerChangeTheirNameCommand.cs" />
-    <Compile Include="Commands\LoadCommand.cs" />
-    <Compile Include="Commands\LookCommand.cs" />
-    <Compile Include="Commands\MoveCommand.cs" />
-    <Compile Include="Commands\SaveCommand.cs" />
-    <Compile Include="Commands\StatsCommand.cs" />
+    <Compile Include="Commands\Public\AttackCommand.cs" />
+    <Compile Include="Commands\Public\DropCommand.cs" />
+    <Compile Include="Commands\Internal\ICommandInternal.cs" />
+    <Compile Include="Commands\Public\InteractCommand.cs" />
+    <Compile Include="Commands\Public\GrabCommand.cs" />
+    <Compile Include="Commands\Public\InventoryCommand.cs" />
+    <Compile Include="Commands\Internal\InternalCommandHelper.cs" />
+    <Compile Include="Commands\Public\ShopCommand.cs" />
+    <Compile Include="Commands\Internal\ClearCommand.cs" />
+    <Compile Include="Commands\Public\PublicCommandHelper.cs" />
+    <Compile Include="Commands\Internal\ExitCommand.cs" />
+    <Compile Include="Commands\Public\ICommand.cs" />
+    <Compile Include="Commands\Internal\LetPlayerChangeTheirNameCommand.cs" />
+    <Compile Include="Commands\Internal\LoadCommand.cs" />
+    <Compile Include="Commands\Public\LookCommand.cs" />
+    <Compile Include="Commands\Public\MoveCommand.cs" />
+    <Compile Include="Commands\Internal\SaveCommand.cs" />
+    <Compile Include="Commands\Public\StatsCommand.cs" />
     <Compile Include="Console.cs" />
     <Compile Include="EqualChecker.cs" />
     <Compile Include="Item.cs" />
