Create client class and concept of attached clients

--- a/GameEngine/GameEngine.csproj
+++ b/GameEngine/GameEngine.csproj
@@ -44,6 +44,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AttachedClients.cs" />
+    <Compile Include="Client.cs" />
     <Compile Include="Characters\Behaviors\BuiltInTurnBehaviors.cs" />
     <Compile Include="Characters\Behaviors\ITurnBehavior.cs" />
     <Compile Include="Characters\Behaviors\TurnBehaviorFocusedPlayer.cs" />
@@ -61,10 +63,11 @@
     <Compile Include="Commands\Internal\ExitCommand.cs" />
     <Compile Include="Commands\Public\ICommand.cs" />
     <Compile Include="Commands\Internal\LetPlayerChangeTheirNameCommand.cs" />
-    <Compile Include="Commands\Internal\LoadCommand.cs" />
+    <Compile Include="Commands\Server\ICommandServer.cs" />
+    <Compile Include="Commands\Server\LoadCommand.cs" />
     <Compile Include="Commands\Public\LookCommand.cs" />
     <Compile Include="Commands\Public\MoveCommand.cs" />
-    <Compile Include="Commands\Internal\SaveCommand.cs" />
+    <Compile Include="Commands\Server\SaveCommand.cs" />
     <Compile Include="Commands\Public\StatsCommand.cs" />
     <Compile Include="Console.cs" />
     <Compile Include="EqualChecker.cs" />
