--- a/Moonrake/Moonrake.csproj
+++ b/Moonrake/Moonrake.csproj
@@ -47,6 +47,7 @@
     <Compile Include="MoonRakeItems.cs" />
     <Compile Include="MoonRakeLocations.cs" />
     <Compile Include="MoonRakePlayersAndCharacters.cs" />
+    <Compile Include="NewPlayerSourceData.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
