--- a/DreamsAndWhatTheyMean/TheTaleOfTheDragonKitty.csproj
+++ b/DreamsAndWhatTheyMean/TheTaleOfTheDragonKitty.csproj
@@ -55,6 +55,7 @@
     <Compile Include="DragonKittyStrangeItems\BronzeTalisman.cs" />
     <Compile Include="DragonKittyStrangeItems\RoomLight.cs" />
     <Compile Include="DragonKittyStrangeItems\Wallet.cs" />
+    <Compile Include="NewPlayerSourceData.cs" />
     <Compile Include="TheTaleOfTheDragonKittySourceData.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
