Adding pseudo accounts

--- a/GameEngine/GameEngine.csproj
+++ b/GameEngine/GameEngine.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Account.cs" />
     <Compile Include="AttachedClients.cs" />
     <Compile Include="Client.cs" />
     <Compile Include="Characters\Behaviors\BuiltInTurnBehaviors.cs" />
