--- a/GameClient/GameClient.csproj
+++ b/GameClient/GameClient.csproj
@@ -58,7 +58,15 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Commands\CreateAccountCommand.cs" />
+    <Compile Include="CreateAccountDialog.xaml.cs">
+      <DependentUpon>CreateAccountDialog.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Windows.cs" />
+    <Page Include="CreateAccountDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
