--- a/ServerEngine/ServerEngine.csproj
+++ b/ServerEngine/ServerEngine.csproj
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Amqp.Net, Version=2.1.0.0, Culture=neutral, PublicKeyToken=905a7b1e6458e0c3, processorArchitecture=MSIL">
+      <HintPath>..\packages\AMQPNetLite.2.1.7\lib\net45\Amqp.Net.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.12.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -89,6 +92,9 @@
     <Compile Include="EngineInternal.cs" />
     <Compile Include="GameState.cs" />
     <Compile Include="Locations\Location.cs" />
+    <Compile Include="MessageBroker\Broker.cs" />
+    <Compile Include="MessageBroker\LinkProcessor.cs" />
+    <Compile Include="MessageBroker\ServerToClientLinkEndpoint.cs" />
     <Compile Include="MutablePair.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringExtensionMethods.cs" />
@@ -106,10 +112,6 @@
     <ProjectReference Include="..\BaseClientServerDtos\BaseClientServerDtos.csproj">
       <Project>{50A99435-349F-49E0-969F-F98B1ACCED5E}</Project>
       <Name>BaseClientServerDtos</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\NetworkUtils\NetworkUtils.csproj">
-      <Project>{4be93677-c3ef-4b2f-96eb-6738fa2207cf}</Project>
-      <Name>NetworkUtils</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
