--- a/BaseClientServerDtos/BaseClientServerDtos.csproj
+++ b/BaseClientServerDtos/BaseClientServerDtos.csproj
@@ -49,6 +49,7 @@
     <Compile Include="FiniteDto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ToServer\CreateAccountDto.cs" />
+    <Compile Include="ToServer\GenericServerCommandDto.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
